<resources>
    <string name="app_name">MovieDB</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_favourite">Favourite movies</string>
    <string name="nav_popular_movie">Popular movies</string>
    <string name="nav_now_playing">Now playing movies</string>
    <string name="nav_upcoming">Upcoming movies</string>
    <string name="nav_top_rated_movie">Top rated movies</string>
    <string name="nav_popular_tv">Popular TV shows</string>
    <string name="nav_top_rated_tv">Top rated TV shows</string>
    <string name="nav_the_air_tv">On the air TV shows</string>
    <string name="menu_search">Search</string>
    <string name="search_history">Search history</string>
    <string name="trailer">Trailer</string>
    <string name="no_trailer_result">The movie have no trailer </string>
    <string name="no_data">No data </string>
    <string name="cast">Casts</string>
    <string name="origin_country">Origin country</string>
    <string name="production_companis">Production companis</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="others">Others</string>
    <string name="vote_count">Vote count&#58; </string>
    <string name="my_favourite">My Favourite</string>
    <string name="title_search">Search</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="family">Family</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="title_load_by_genre">Load By Genre</string>
</resources>
