<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.framgia.movie06.ui.activity.DetailActivity"
        >
        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="@dimen/width_image"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            />
        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/padding_text"
            android:paddingRight="@dimen/padding_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_text_title"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="@dimen/unuse_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/text_title_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/origin_country"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/text_origin_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/image_favourite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_not_favourite"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/text_title_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/production_companis"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/text_production_companis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
        <LinearLayout
            android:id="@+id/linear_trailer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_youtube"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_youtube"
                />
            <TextView
                android:layout_width="@dimen/unuse_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingLeft="@dimen/padding_text"
                android:text="@string/trailer"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/genres"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/text_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/overview"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/text_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/others"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/text_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:id="@+id/text_vote_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/text_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <RatingBar
                android:id="@+id/rating_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:isIndicator="true"
                android:numStars="10"
                android:stepSize="0.1"
                style="?android:attr/ratingBarStyleSmall"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/cast"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_text_title"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
    </LinearLayout>
</ScrollView>
